# Load-Tester

./: .gitignore  README.md  settings.gradle.kts
.github/workflows/: android.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/res/color/: chip_text.xml
app/src/main/res/drawable/: box_accent.xml  header_bg.xml  ic_back.xml  ic_beaker.xml  ic_bluetooth.xml  ic_check.xml  ic_check_notif.xml  ic_delete.xml  ic_download.xml  ic_history.xml  ic_info.xml  ic_launcher_foreground.xml  ic_launcher_full.xml  ic_lock.xml  ic_pause.xml  ic_play.xml  ic_power.xml  ic_record.xml  ic_save.xml  ic_settings.xml  ic_warning.xml  ic_zap.xml  protection_banner.xml  widget_bg.xml  widget_btn_bg.xml
app/src/main/res/layout/: activity_history.xml  activity_main.xml  activity_result.xml  activity_session_result.xml  activity_settings.xml  activity_trends.xml  chip_mode.xml  dialog_demo_circuit.xml  item_test_record.xml  section_monitor.xml  section_test.xml  widget_live.xml
app/src/main/res/menu/: main_menu.xml
app/src/main/res/mipmap/: ic_launcher.xml
app/src/main/res/values/: arrays.xml  bools.xml  colors.xml  strings.xml  styles.xml  themes.xml
app/src/main/res/values-night/: bools.xml  colors.xml
app/src/main/res/xml/: preferences.xml  widget_live_info.xml
firmware/: .gitignore  CAPACITY_PLAN.md  CMakeLists.txt  FEATURE_IDEAS.md  FIRST_CONTACT.md  HANDOVER.md  QA_GUIDE.md  QA_REPORT.md  README.md  RTEST_ACCURACY.md  UI_DESIGN_BRIEF.md  partitions.csv  platformio.ini  sdkconfig.defaults
firmware/components/: README.md
firmware/components/Arduino_GFX/: CMakeLists.txt
firmware/components/NimBLE-Arduino/: CMakeLists.txt
firmware/include/: lv_conf.h
firmware/main/: CMakeLists.txt  idf_component.yml
firmware/src/: audio.cpp  audio.h  board_config.h  capacity_test.h  display.cpp  display.h  el15_client.cpp  el15_client.h  el15_controller.h  el15_protocol.h  link_guard.h  main.cpp  netclock.cpp  netclock.h  prefs.cpp  prefs.h  report.h  resistance_test.h  sd_card.cpp  sd_card.h  ui.cpp  ui.h
simulator/: README.md  build.gradle.kts  proguard-rules.pro
simulator/src/main/: AndroidManifest.xml
(+48 files in other folders)
